style.css
* {
  margin: 0;
  padding: 0;
  font-family: 'Poppins', sans-serif;
  box-sizing: border-box;
}

body {
  background-color: black;
  color: #fff;


}

.header-text h1 {
  font-size: 60px;
  margin-top: 20px;
}

#header {
  height: 100vh;
  background-image: url(img/better.JPG);
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

.logo {
  font-weight: 800;
  font-size: 50px;
  display: inline-block;
  margin: 0;
}

.first_letter {
  color: #ff004f;
}

.container {
  padding: 10px 10%;
  /* background-color: black; */
  height: auto;
}

nav {
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-top: 20px;
}

.logo {
  display: inline-block;
}

nav ul li {
  display: inline-block;
  list-style: none;
  margin: 10px 20px;
}

nav ul li a {
  color: #fff;
  text-decoration: none;
  font-size: 18px;
  position: relative;
}

nav ul li a::after {
  content: '';
  width: 0;
  height: 3px;
  background: #ff004f;
  position: absolute;
  left: 0;
  bottom: -6px;
  transition: 0.5s;
}

nav ul li a:hover::after {
  width: 100%;
}

.header-text {
  margin-top: 20%;
  font-size: 30px;
  width: 500px;
}



.header-text h1 span {
  color: #ff004f;
}

/* ------------------about-------------*/

.bird {
  width: 500px;
}

#about {
  padding: 80px 0;
  color: #ababab;
  height: auto;
}

.row {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.about-col-1 {
  flex-basis: 35%;
}

.about-col-1 img {
  width: 100%;
  border-radius: 15px;
}

.about-col-2 {
  flex-basis: 60%;
}

.sub-title {
  font-size: 60px;
  font-weight: 600;
  color: #fff;
}

#project-title {
  text-align: center;
}

.tab-titles {
  display: flex;
  margin: 20px 0 40px;
}

.tab-links {
  margin-right: 50px;
  font-size: 18px;
  font-weight: 500;
  cursor: pointer;
  position: relative;
}

.tab-links::after {
  content: '';
  width: 0;
  height: 3px;
  background: #ff004f;
  position: absolute;
  left: 0;
  bottom: -8px;
  transition: 0.5s;
}

.tab-links.active-link::after {
  width: 100%;
}

.tab-contents ul li {
  list-style: none;
  margin: 10px 0;
}

.tab-contents ul li span {
  color: #b54769;
  font-size: 14px;
}

.tab-contents {
  display: none;
}

.tab-contents.active-tab {
  display: block;
}

/* -------------------projects-------------------------- */

#projects {
  padding: 50px 0px;
}

.work-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(400px, 2fr));
  grid-gap: 40px;
  margin-top: 50px;
  align-items: center;
  justify-content: center;
}

.work {
  border-radius: 10px;
  position: relative;
  border: 3px solid #ff004f;
  height: 360px;
  margin: auto;
}

.work img {
  width: 400px;
  padding: 20px;
  border: red;
  height: 100%;
  border-radius: 10px;
  display: block;
  transition: transform 0.5s;
}

.layer {
  width: 100%;
  height: 0;
  background: linear-gradient(rgba(0, 0, 0, 0.6), #ff004f);
  border-radius: 10px;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  padding: 0 40px;
  text-align: center;
  font-size: 14px;
  transition: height 0.5s;
}

.layer h3 {
  font-weight: 500;
  margin-bottom: 20px;
}

.layer p {
  height: 40px;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.layer a {
  margin-top: 20px;
  color: #ff004f;
  text-decoration: none;
  font-size: 18px;
  line-height: 60px;
  background-color: #fff;
  width: 60px;
  height: 60px;
  border-radius: 50%;
  text-align: center;
}

.work:hover img {
  transform: scale(1.1);
}

.work:hover .layer {
  height: 100%;
}

.btn {
  display: block;
  margin: 50px auto;
  width: fit-content;
  border: 1px solid #ff004f;
  padding: 14px 50px;
  border-radius: 6px;
  text-decoration: none;
  color: #fff;
  transition: background 0.5s;
}

.btn:hover {
  background: #ff004f;
}

.copyright {
  text-align: center;
  font-size: 13px;
  margin-bottom: 15px;
}

/* mobile nav list */

nav {
  position: relative;
  display: flex;
  align-items: center;
}

.hamburger-icon {
  display: inline-block;

  cursor: pointer;
  font-size: 20px;
}

.nav-list-mobile {
  display: none;
  position: absolute;
  flex-direction: column;
  margin-left: auto;
  background-color: rgba(24, 20, 20, 0.945);
  padding: 15px 10px;
  margin-bottom: 30px;
  top: 15px;
  right: 5px;
}

.nav-list-mobile li {
  margin: 7px;
  cursor: pointer;
}

.show-modal {
  display: flex;
}

@media screen and (max-width: 500px) {

  #about {
    padding: 0 30px;
  }

  .container {
    padding: 0;
  }

  .logo {
    font-weight: 800;
    font-size: 35px;
  }

  .header-text h1 {
    font-size: 40px;
    margin-top: 20px;
  }

  .header-text {
    margin-top: 20%;
    font-size: 15px;
    width: 150px;
  }

  .about-col-2 {
    margin-top: 30px;
    flex-basis: 100%;
  }

  .nav-list {
    display: none;
  }

  .about-col-1 {
    display: none;
  }


  #header {
    padding: 25px;
    margin-bottom: 0px;
    height: auto;
  }

  #about {
    padding-top: 0;
  }

  .sub-title {
    font-size: 40px;
    text-align: center;
  }

  .row {

    justify-content: center;
  }



  .desc-text {
    font-size: 15px;
  }

  i {
    right: 20px;
  }

  .tab-contents {
    font-size: 20px;
  }

  h1.head {
    font-size: 25px;
    width: 200px;
  }

  img.bird {
    width: 200px;
  }

  #about {
    padding-bottom: 20px;
  }

  #projects {
    padding-top: 10px;
  }
}

@media screen and (min-width: 1000px) {
  .hamburger-icon {
    display: none;
  }
}

/* @media screen and (max-width: 500px) {
  p {
    font-size: 15px;
    margin: 25px;
    width: auto;
  }

   {
    font: 20px, Poppins, sans-serif;
  }

} */

